# Laurux_Qt

./: .gitignore  CMakeLists.txt  Laurux.pro  laurux.qrc  laurux_fr.ts  main.cpp  qml.qrc
qml/: Main.qml  Parameters.qml  Preferences.qml
qml/assets/: LCheckBoxStyle.qml  LToolTip.qml
qml/utils/: desEncrypt.js
src/: settings.cpp  settings.h
src/model/: colormodel.cpp  colormodel.h
